--- a/pom.xml
+++ b/pom.xml
@@ -321,7 +321,7 @@
         <slick-webjars.version>1.6.0</slick-webjars.version>
         <tablesaw-webjars.version>2.0.3</tablesaw-webjars.version>
         <tooltipster-webjars.version>4.2.5</tooltipster-webjars.version>
-        <bootstrap-webjars.version>4.3.1</bootstrap-webjars.version>
+        <bootstrap-webjars.version>3.3.6</bootstrap-webjars.version>
         <bootstrap-select-webjars.version>1.10.0</bootstrap-select-webjars.version>
         <bootstrap-datepicker-webjars.version>1.9.0</bootstrap-datepicker-webjars.version>
         <bootstrap-slider-webjars.version>7.1.0</bootstrap-slider-webjars.version>
@@ -331,6 +331,7 @@
         <spotbugs.version>3.1.8</spotbugs.version>
         <spotbugs.omitvisitors>SerializableIdiom</spotbugs.omitvisitors>
         <stacktable-webjars.version>1.0.1</stacktable-webjars.version>
+        <springdoc.version>1.2.32</springdoc.version>
         <springfox.version>2.9.2</springfox.version>
         <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
@@ -1433,6 +1434,11 @@
                 <version>${jest.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
@@ -1641,6 +1647,11 @@
             <dependency>
                 <groupId>com.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-restservices</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.dropship</groupId>
+                <artifactId>nemesis-module-everything5pounds</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
