--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,7 @@
         <asciidoctorj-diagram.version>1.5.16</asciidoctorj-diagram.version>
         <atmosphere.version>2.2.13</atmosphere.version>
         <camunda.version>7.11.0</camunda.version>
-        <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
-        </checkstyle.violation.ignore>
+        <checkstyle.violation.ignore>NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
         <classindex.version>3.9</classindex.version>
         <codemodel.version>3.2.4</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
@@ -241,7 +240,7 @@
         <maven-artifact-manager.version>2.2.1</maven-artifact-manager.version>
         <maven-war-plugin.version>3.1.0</maven-war-plugin.version>
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
-        <maven-checkstyle-plugin.version>2.15</maven-checkstyle-plugin.version>
+        <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
         <maven-checkstyle-plugin.skip>false</maven-checkstyle-plugin.skip>
         <maven-failsafe-plugin.skip>false</maven-failsafe-plugin.skip>
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
@@ -2267,8 +2266,8 @@
                         <skip>${maven-checkstyle-plugin.skip}</skip>
                         <configLocation>src/main/resources/nemesis-checkstyle.xml</configLocation>
                         <headerLocation>src/main/resources/nemesis-header.txt</headerLocation>
-                        <sourceDirectory>src/main/java</sourceDirectory>
-                        <testSourceDirectory>src/test/java</testSourceDirectory>
+                        <sourceDirectories>src/main/java</sourceDirectories>
+                        <testSourceDirectories>src/test/java</testSourceDirectories>
                         <failOnViolation>true</failOnViolation>
                         <logViolationsToConsole>true</logViolationsToConsole>
                     </configuration>
