--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
         <money-validation.version>2.0.0</money-validation.version>
         <nemesis.version>${project.version}</nemesis.version>
-        <nemesis-tools.version>2.1.0.BUILD-SNAPSHOT</nemesis-tools.version>
+        <nemesis-tools.version>2.1.0.RELEASE</nemesis-tools.version>
         <nemesis-rules.version>2.0.0.RELEASE</nemesis-rules.version>
         <opencmis.version>1.1.0</opencmis.version>
         <olingo-odata2.version>2.0.11</olingo-odata2.version>
