--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,6 @@
         <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
         <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
         <maven-plugin-log4j.version>1.0.1</maven-plugin-log4j.version>
-        <owasp.esapi.version>2.2.0.0</owasp.esapi.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
         <maven-project-info-reports.plugin>2.9</maven-project-info-reports.plugin>
         <maven-appassembler-plugin.version>1.8</maven-appassembler-plugin.version>
@@ -285,6 +284,7 @@
         <maven-plugin-api.version>3.5.0</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
         <money-validation.version>2.0.0</money-validation.version>
+        <mongodb-embedded.version>5.0.5</mongodb-embedded.version>
         <nemesis.version>${project.version}</nemesis.version>
         <nemesis-tools.version>2.1.0.RELEASE</nemesis-tools.version>
         <nemesis-rules.version>2.0.0.RELEASE</nemesis-rules.version>
@@ -294,6 +294,7 @@
         <openpdf.version>1.3.11</openpdf.version>
         <oracle.version>12.2.0.1</oracle.version>
         <orika.version>1.5.3-nemesis</orika.version>
+        <owasp.esapi.version>2.2.0.0</owasp.esapi.version>
         <paypal-sdk.version>2.15.122</paypal-sdk.version>
         <paypal-rest-sdk.version>1.14.0</paypal-rest-sdk.version>
         <proguard.version>5.2.1</proguard.version>
@@ -1116,6 +1117,11 @@
                 <groupId>com.github.kstyrc</groupId>
                 <artifactId>embedded-redis</artifactId>
                 <version>${redis-embedded.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.svenkubiak</groupId>
+                <artifactId>embedded-mongodb</artifactId>
+                <version>${mongodb-embedded.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.debop</groupId>
